[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://textures/inn_potions.png" type="Texture" id=2]
[ext_resource path="res://textures/ale.png" type="Texture" id=3]
[ext_resource path="res://textures/slime.png" type="Texture" id=4]
[ext_resource path="res://textures/potion.png" type="Texture" id=5]
[ext_resource path="res://textures/coin.png" type="Texture" id=6]
[ext_resource path="res://textures/sun.png" type="Texture" id=7]
[ext_resource path="res://scripts/SceneController.gd" type="Script" id=8]

[node name="SceneController" type="Node"]
script = ExtResource( 8 )

[node name="World" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Inn" type="Sprite" parent="World"]
position = Vector2( 102, 161 )
texture = ExtResource( 2 )

[node name="buttons" type="CanvasLayer" parent="World"]

[node name="ale" type="Button" parent="World/buttons"]
margin_left = 9.0
margin_top = 274.0
margin_right = 78.0447
margin_bottom = 301.0
text = "Make ale"
icon = ExtResource( 3 )

[node name="Coin" type="Sprite" parent="World/buttons/ale"]
position = Vector2( 108, 10 )
texture = ExtResource( 6 )

[node name="Coin2" type="Sprite" parent="World/buttons/ale"]
position = Vector2( 128, 10 )
texture = ExtResource( 6 )

[node name="potion" type="Button" parent="World/buttons"]
margin_left = 9.0
margin_top = 311.0
margin_right = 100.045
margin_bottom = 338.0
text = "Make potions"
icon = ExtResource( 5 )

[node name="Coin3" type="Sprite" parent="World/buttons/potion"]
position = Vector2( 129, 12 )
texture = ExtResource( 6 )

[node name="Slime" type="Sprite" parent="World/buttons/potion"]
position = Vector2( 157, 11 )
texture = ExtResource( 4 )

[node name="Slime2" type="Sprite" parent="World/buttons/potion"]
position = Vector2( 193, 11 )
texture = ExtResource( 4 )

[node name="rest" type="Button" parent="World/buttons"]
margin_left = 9.0
margin_top = 347.0
margin_right = 49.0447
margin_bottom = 374.0
text = "Rest"
icon = ExtResource( 7 )

[node name="stock" type="CanvasLayer" parent="World"]

[node name="coins" type="Label" parent="World/stock"]
margin_left = 228.0
margin_top = 61.0
margin_right = 287.0
margin_bottom = 75.0
text = "Coins: 10"

[node name="slimes" type="Label" parent="World/stock"]
margin_left = 228.0
margin_top = 86.0
margin_right = 295.0
margin_bottom = 100.0
text = "Slimes: 10"

[node name="ale" type="Label" parent="World/stock"]
margin_left = 228.0
margin_top = 155.0
margin_right = 268.0
margin_bottom = 169.0
text = "Ale: 0"

[node name="potions" type="Label" parent="World/stock"]
margin_left = 228.0
margin_top = 181.0
margin_right = 292.0
margin_bottom = 195.0
text = "Potions: 0"

[node name="today" type="CanvasLayer" parent="World"]

[node name="Line2D" type="Line2D" parent="World/today"]
points = PoolVector2Array( 14, 397, 446, 397 )
width = 3.0

[node name="Patrons" type="Label" parent="World/today"]
margin_left = 12.0
margin_top = 440.0
margin_right = 80.0
margin_bottom = 454.0
text = "Patrons : 3"

[node name="Ale" type="Label" parent="World/today"]
margin_left = 12.0
margin_top = 464.0
margin_right = 88.0
margin_bottom = 478.0
text = "Ale drank: 0"

[node name="Pos" type="Position2D" parent="World/today/Ale"]
position = Vector2( 453, 8 )

[node name="Potions" type="Label" parent="World/today"]
margin_left = 10.0
margin_top = 488.0
margin_right = 122.0
margin_bottom = 502.0
text = "Potions bought: 0"

[node name="Pos" type="Position2D" parent="World/today/Potions"]
position = Vector2( 455, 8 )

[node name="Slimes" type="Label" parent="World/today"]
margin_left = 9.0
margin_top = 512.0
margin_right = 137.0
margin_bottom = 526.0
text = "Slimes brought in: 0"

[node name="Pos_Coins" type="Position2D" parent="World/today/Slimes"]
position = Vector2( 456, 8 )

[node name="Pos_Slimes" type="Position2D" parent="World/today/Slimes"]
position = Vector2( 456, 32 )

[node name="Label" type="Label" parent="World/today"]
margin_left = 224.0
margin_top = 408.0
margin_right = 264.0
margin_bottom = 422.0
text = "Today"

[node name="DialogBtn" type="Button" parent="World"]
margin_left = 75.0
margin_top = 159.0
margin_right = 117.0
margin_bottom = 179.0
text = "Next"

[connection signal="pressed" from="World/buttons/ale" to="World" method="_on_ale_pressed"]
[connection signal="pressed" from="World/buttons/potion" to="World" method="_on_potion_pressed"]
[connection signal="pressed" from="World/buttons/rest" to="World" method="_on_rest_pressed"]
[connection signal="pressed" from="World/DialogBtn" to="." method="_on_DialogBtn_pressed"]
